--- a/Examen/app/src/main/res/values/strings.xml
+++ b/Examen/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Examen</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="botonDFrag">Limpiar</string>
 </resources>
